Fix text overflow

--- a/src/style/post.scss
+++ b/src/style/post.scss
@@ -104,6 +104,7 @@
     }
   }
   a {
+    overflow-wrap: break-word;
     color: var(--post-link-color);
     text-decoration: underline;
     &:hover,
@@ -174,6 +175,7 @@
     }
   }
   .highlight {
+    overflow: scroll;
     table {
       border: 0;
       margin: 0;
